Straight Balls Illusion #6 - made design changes, fixed canvas layers, added box and text shadows, made custom scrollbar

--- a/02_Javascript and JSON/27_Straight Balls Illusion/style.css
+++ b/02_Javascript and JSON/27_Straight Balls Illusion/style.css
@@ -8,9 +8,12 @@
 :root {
     --color-theme: hsla(240, 100%, 80%, 1);
     --color-wrapper: hsla(240, 100%, 75%, 1);
+    --color-wrapper-title-shadow: hsla(240, 100%, 65%, 1);
     --color-btn-container: hsla(240, 100%, 75%, 1);
     --color-btn-background: hsla(240, 100%, 85%, 1);
     --color-btn-border: hsla(240, 90%, 70%, 1);
+    --color-scrollbar-thumb: hsla(240, 100%, 85%, 1);
+    --color-scrollbar-thumb-hover: hsla(240, 100%, 70%, 1);
     --color-btn-background-clicked: hsla(0, 100%, 85%, 1);
     --color-btn-border-clicked: hsla(0, 90%, 70%, 1);
 }
@@ -31,6 +34,7 @@ body {
     border-radius: 1em;
     display: flex;
     flex-direction: column;
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
 
 .wrapper-title {
@@ -40,6 +44,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-shadow: .05em .05em .05em var(--color-wrapper-title-shadow);
 }
 
 .canvas-container {
@@ -59,9 +64,9 @@ body {
     background-color: var(--color-btn-container);
     display: flex;
     gap: 1em;
-    border-bottom-left-radius: 1em;
-    border-bottom-right-radius: 1em;
     overflow: auto;
+    border-bottom-left-radius: .5em;
+    border-bottom-right-radius: .5em;
 }
 
 .btn-balls-toggle {
@@ -70,12 +75,30 @@ body {
     border: var(--color-btn-border) .1em solid;
     font-size: 1.2em;
     cursor: pointer;
+    box-shadow: inset 0 -.1em .1em rgba(0, 0, 0, 0.1),
+        0.1em 0.1em .5em rgba(0, 0, 0, 0.25);
 }
 
 .btn-balls-toggle.clicked {
     background-color: var(--color-btn-background-clicked);
-    border-radius: .3em;
     border: var(--color-btn-border-clicked) .1em solid;
-    font-size: 1.2em;
-    cursor: pointer;
+}
+
+::-webkit-scrollbar {
+    width: 1em;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 .1em white;
+    border-radius: 1em;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--color-scrollbar-thumb);
+    border-radius: 1em;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--color-scrollbar-thumb-hover);
+    ;
 }
